--- a/styles.css
+++ b/styles.css
@@ -28,27 +28,62 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.display-message {
+    color: white;
+    font-size: 2.5rem;
 }
 
 .container{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    gap: 10px;
-    background-color: brown;
-    border: 10px solid black;
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    /* grid-template-columns: repeat(3, 1fr); */
+    justify-content: center;
+    gap: 12px;
+    background-color: black;
+    /* border: 10px solid yellow; */
     width: 500px;
     border-radius: 8px;
 }
 
 .cells {
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     cursor: pointer;
     line-height: 100px;
-    background-color: aqua;
+    background-color: red;
+    color: aqua;
     border-radius: 8px;
-    font-size: 60px;
+    font-size: 140px;
+    user-select: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.cells:hover {
+    background-color: #FF7377
+
+  }
+
+  .restartBtn {
+    padding: 10px 20px;
+    border: 3px solid yellow;
+    border-radius: 7px;
+    background-color: aqua;
+    color: red;
+    font-size: 50px;
+    cursor: pointer;
+  }
+
+  .restartBtn:hover {
+    background-color: #9DFFFF;
+  }
 
 footer {
     background-color: yellow;
