added styles for pvp js file

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: black;
+    background-color: white;
     display: flex;
     flex-direction: column;
     gap: 12px;
