--- a/styles.css
+++ b/styles.css
@@ -34,9 +34,14 @@ main {
     gap: 12px;
 }
 
-.display-message {
+#display-message {
     color: white;
     font-size: 2.5rem;
+}
+
+.middle {
+    display: flex;
+    gap: 30px;
 }
 
 .container{
@@ -92,23 +97,34 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-style: italic;
 }
 
-#play-section {
+#play-section.on {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    background-color: yellow;
+    background-color: black;
+    border-radius: 8px;
 }
 
-#play-btn {
+#play-section {
+    display: none;
+}
+
+#play-type-selection {
+    display: flex;
+    align-items: flex-start;
+}
+
+#playBtn {
     display: flex;
     color: aqua;
+    font-size: 2rem;
 }
 
-.play-btn-activated {
-    color: green;
+.playBtn-activated {
+    color: red;
     cursor: pointer;
 }
 
@@ -124,8 +140,24 @@ footer {
     display: flex;
     padding: 1vw;
     width: 13.5vw;
-    height: 17vw;
+    /* height: */
     justify-content: center;
+}
+
+#PVP, #AI {
+    color: yellow;
+}
+
+label {
+    font-size: 1.4rem;
+    color: yellow;
+}
+
+input {
+    height: 50px;
+    width: 200px;
+    padding: 10px;
+    margin-top: 8px;
 }
 
 .players {
