--- a/styles.css
+++ b/styles.css
@@ -76,20 +76,6 @@ main {
 
   }
 
-  .restartBtn {
-    padding: 10px 20px;
-    border: 3px solid yellow;
-    border-radius: 7px;
-    background-color: aqua;
-    color: red;
-    font-size: 50px;
-    cursor: pointer;
-  }
-
-  .restartBtn:hover {
-    background-color: #9DFFFF;
-  }
-
 footer {
     background-color: yellow;
     font-size: 1.2rem;
@@ -120,7 +106,11 @@ footer {
 #playBtn {
     display: flex;
     color: aqua;
-    font-size: 2rem;
+    font-size: 3rem;
+}
+
+#playBtn:hover {
+    background-color: darkred;
 }
 
 .playBtn-activated {
